tests/asm-link/invalid-bank-known/rgbasm.err
error: invalid bank constraint for section
   ╭─[ test.asm:1:28 ]
   │
 1 │ SECTION "vram", VRAM, BANK[2]
   │                            ┬  
   │                            ╰── VRAM sections can be between 0 and 1, not 2
───╯
1 error generated.
